name:                Gomoku
version:             0.9.0.0
synopsis:            Gomoku (5-in-a-row) game
-- description:         
homepage:            http://studres.cs.st-andrews.ac.uk/CS2006-APP
author:              Edwin Brady with additions by: 120014756, 130004910, 130017964
maintainer:          ecb10@st-andrews.ac.uk
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable gomoku
  main-is:             Main.hs
  Other-modules:       Board, Input, Draw, AI
  build-depends:       base >=4.6 && <4.8,
                       gloss,
                       HUnit
  hs-source-dirs:      src
  default-language:    Haskell2010
